[gd_scene load_steps=7 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" path="res://DialogueBalloon/balloon.gd" id="1_36de5"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Theme" uid="uid://buadipsc8aeyu" path="res://Assets/Styles/Dialogue/entityui.tres" id="2_crns6"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="3_72ixx"]
[ext_resource type="AudioStream" uid="uid://50jt5hv8ai3x" path="res://Assets/Audio/TextSFX/TextSFX.wav" id="5_a26kt"]
[ext_resource type="AudioStream" uid="uid://bmyo2vlmobh15" path="res://Assets/Audio/TextSFX/NarratorSFX.wav" id="10_02dk6"]

[node name="Balloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_36de5")
Warrior_textcol = Color(0.999634, 0.0928994, 0.0610297, 1)
Mage_textcol = Color(4.44728e-05, 0.594388, 0.986172, 1)
Cleric_textcol = Color(0.988805, 0.988806, 2.31028e-06, 1)
Thief_textcol = Color(0, 0.85771, 4.23551e-06, 1)
Player_textcol = Color(0.800491, 0.800491, 0.800491, 1)

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_crns6")

[node name="Panel" type="Panel" parent="Balloon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -183.0
offset_right = -19.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="Dialogue" type="MarginContainer" parent="Balloon/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/Panel/Dialogue"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Portrait" type="TextureRect" parent="Balloon/Panel/Dialogue/HBoxContainer"]
unique_name_in_owner = true
visible = false
clip_contents = true
custom_minimum_size = Vector2(158, 151)
layout_mode = 2
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/Panel/Dialogue/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Panel/Dialogue/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.25
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Panel/Dialogue/HBoxContainer/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 30
text = "Dialogue..."

[node name="NarratorTimer" type="Timer" parent="Balloon/Panel/Dialogue/HBoxContainer/VBoxContainer/DialogueLabel"]
one_shot = true

[node name="Responses" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -558.0
offset_right = 494.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 0

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/Responses/ResponsesMenu"]
layout_mode = 2
text = "Response example"

[node name="MageSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a26kt")

[node name="WarriorSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a26kt")

[node name="ClericSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a26kt")

[node name="ThiefSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a26kt")

[node name="PlayerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a26kt")

[node name="NarratorSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_02dk6")

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="spoke" from="Balloon/Panel/Dialogue/HBoxContainer/VBoxContainer/DialogueLabel" to="." method="_on_dialogue_label_spoke"]
[connection signal="timeout" from="Balloon/Panel/Dialogue/HBoxContainer/VBoxContainer/DialogueLabel/NarratorTimer" to="." method="_on_narrator_timer_timeout"]
[connection signal="response_selected" from="Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
